# book-see-rag

./: .env.example  .env.mac  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
benchmark_results/: display_pricing_benchmark_20260424_120209.json  display_pricing_benchmark_20260424_120209.md  lianxiang_laptop_benchmark_20260424_092432.json  lianxiang_laptop_benchmark_20260424_092432.md  lianxiang_laptop_benchmark_20260424_092728.json  lianxiang_laptop_benchmark_20260424_092728.md  lianxiang_laptop_benchmark_20260424_093116.json  lianxiang_laptop_benchmark_20260424_093116.md  lianxiang_laptop_benchmark_20260424_093430.json  lianxiang_laptop_benchmark_20260424_093430.md  lianxiang_laptop_benchmark_20260424_093741.json  lianxiang_laptop_benchmark_20260424_093741.md  lianxiang_laptop_benchmark_20260424_094301.json  lianxiang_laptop_benchmark_20260424_094301.md  lianxiang_laptop_benchmark_20260424_094615.json  lianxiang_laptop_benchmark_20260424_094615.md  rag_benchmark_20260423_145245.json  rag_benchmark_20260423_145245.md  rag_benchmark_20260424_111034.json  rag_benchmark_20260424_111034.md  rag_benchmark_20260424_111510.json  rag_benchmark_20260424_111510.md  rag_benchmark_20260424_112212.json  rag_benchmark_20260424_112212.md
data/: benchmark_profiles.json  query_profiles.json
docker/: Dockerfile.api  Dockerfile.control_plane  Dockerfile.ui  Dockerfile.worker  docker-compose.tenant.example.yml  tenant.env.example
docs/: display_pricing_eval_set.json  hard_multitenancy_implementation.md  lianxiang_laptop_eval_set.json  rag_quality_eval_set.json  (+3 more)
(+54 files in other folders)
